// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectScreen /> should handle "displayItem" prop 1`] = `
<SelectScreen
  displayItem={[Function]}
  isItemSelected={[Function]}
  items={
    Array [
      Object {
        "name": "Российский рубль",
        "shortName": "RUB",
      },
      Object {
        "name": "Американский доллар",
        "shortName": "USD",
      },
      Object {
        "name": "Единая европейская валюта",
        "shortName": "EUR",
      },
      Object {
        "name": "Белорусский рубль",
        "shortName": "BYN",
      },
      Object {
        "name": "Украинская гривна",
        "shortName": "UAH",
      },
      Object {
        "name": "Казахстанский тенге",
        "shortName": "KZT",
      },
    ]
  }
  title="Валюта"
>
  <Screen>
    <div
      className="root"
      data-testid="screen"
      style={
        Object {
          "zIndex": 300,
        }
      }
    >
      <ForwardRef(BodySlot)
        key=".1"
      >
        <div
          className="body"
          data-testid="screen:body"
        >
          <MobileLayout
            disabledOn={
              Array [
                "mxs",
                "ms",
              ]
            }
          >
            <div
              className="layout mobile disabled-mxs disabled-ms"
            >
              <div
                className="container"
              >
                <button
                  className="item"
                  key="0"
                  onClick={[Function]}
                >
                  <div
                    className="item is-selected"
                  >
                    Российский рубль
                     (
                    RUB
                    )
                  </div>
                  <ForwardRef(CheckSVG)
                    fill="#212121"
                  >
                    <svg
                      fill="#212121"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        clipRule="evenodd"
                        d="M21.678 5.265a1 1 0 01.057 1.413l-12 13a1 1 0 01-1.36.103l-5-4a1 1 0 011.25-1.562l4.272 3.418L20.265 5.322a1 1 0 011.413-.057z"
                        fillRule="evenodd"
                      />
                    </svg>
                  </ForwardRef(CheckSVG)>
                </button>
                <button
                  className="item"
                  key="1"
                  onClick={[Function]}
                >
                  <div
                    className="item"
                  >
                    Американский доллар
                     (
                    USD
                    )
                  </div>
                </button>
                <button
                  className="item"
                  key="2"
                  onClick={[Function]}
                >
                  <div
                    className="item"
                  >
                    Единая европейская валюта
                     (
                    EUR
                    )
                  </div>
                </button>
                <button
                  className="item"
                  key="3"
                  onClick={[Function]}
                >
                  <div
                    className="item"
                  >
                    Белорусский рубль
                     (
                    BYN
                    )
                  </div>
                </button>
                <button
                  className="item"
                  key="4"
                  onClick={[Function]}
                >
                  <div
                    className="item"
                  >
                    Украинская гривна
                     (
                    UAH
                    )
                  </div>
                </button>
                <button
                  className="item"
                  key="5"
                  onClick={[Function]}
                >
                  <div
                    className="item"
                  >
                    Казахстанский тенге
                     (
                    KZT
                    )
                  </div>
                </button>
              </div>
            </div>
          </MobileLayout>
        </div>
      </ForwardRef(BodySlot)>
    </div>
  </Screen>
</SelectScreen>
`;

exports[`<SelectScreen /> should handle miss "getItemName" prop 1`] = `
<SelectScreen
  items={
    Array [
      Object {
        "name": "Российский рубль",
      },
      Object {
        "name": "Американский доллар",
      },
      Object {
        "name": "Единая европейская валюта",
      },
      Object {
        "name": "Белорусский рубль",
      },
      Object {
        "name": "Украинская гривна",
      },
      Object {
        "name": "Казахстанский тенге",
      },
    ]
  }
  title="Валюта"
>
  <Screen>
    <div
      className="root"
      data-testid="screen"
      style={
        Object {
          "zIndex": 300,
        }
      }
    >
      <ForwardRef(BodySlot)
        key=".1"
      >
        <div
          className="body"
          data-testid="screen:body"
        >
          <MobileLayout
            disabledOn={
              Array [
                "mxs",
                "ms",
              ]
            }
          >
            <div
              className="layout mobile disabled-mxs disabled-ms"
            >
              <div
                className="container"
              >
                <button
                  className="item"
                  key="0"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Российский рубль
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="1"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Американский доллар
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="2"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Единая европейская валюта
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="3"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Белорусский рубль
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="4"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Украинская гривна
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="5"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Казахстанский тенге
                    </span>
                  </ForwardRef(Text)>
                </button>
              </div>
            </div>
          </MobileLayout>
        </div>
      </ForwardRef(BodySlot)>
    </div>
  </Screen>
</SelectScreen>
`;

exports[`<SelectScreen /> should handle props 1`] = `
<SelectScreen
  getItemName={[Function]}
  isItemSelected={[Function]}
  items={
    Array [
      "Верх-Исетский",
      "Чкаловский",
      "Железнодорожный",
      "Кировский",
      "Орджоникидзевский",
      "Октябрьский",
      "Ленинский",
    ]
  }
  onItemClick={[MockFunction]}
  title="Районы"
>
  <Screen>
    <div
      className="root"
      data-testid="screen"
      style={
        Object {
          "zIndex": 300,
        }
      }
    >
      <ForwardRef(BodySlot)
        key=".1"
      >
        <div
          className="body"
          data-testid="screen:body"
        >
          <MobileLayout
            disabledOn={
              Array [
                "mxs",
                "ms",
              ]
            }
          >
            <div
              className="layout mobile disabled-mxs disabled-ms"
            >
              <div
                className="container"
              >
                <button
                  className="item"
                  key="0"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Верх-Исетский
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="1"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Чкаловский
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="2"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Железнодорожный
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="3"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Кировский
                    </span>
                  </ForwardRef(Text)>
                  <ForwardRef(CheckSVG)
                    fill="#212121"
                  >
                    <svg
                      fill="#212121"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        clipRule="evenodd"
                        d="M21.678 5.265a1 1 0 01.057 1.413l-12 13a1 1 0 01-1.36.103l-5-4a1 1 0 011.25-1.562l4.272 3.418L20.265 5.322a1 1 0 011.413-.057z"
                        fillRule="evenodd"
                      />
                    </svg>
                  </ForwardRef(CheckSVG)>
                </button>
                <button
                  className="item"
                  key="4"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Орджоникидзевский
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="5"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Октябрьский
                    </span>
                  </ForwardRef(Text)>
                </button>
                <button
                  className="item"
                  key="6"
                  onClick={[Function]}
                >
                  <ForwardRef(Text)
                    color="gray87"
                    lineHeight={24}
                    size={16}
                  >
                    <span
                      className="size-16 line-height-24 color__gray87"
                      style={Object {}}
                    >
                      Ленинский
                    </span>
                  </ForwardRef(Text)>
                </button>
              </div>
            </div>
          </MobileLayout>
        </div>
      </ForwardRef(BodySlot)>
    </div>
  </Screen>
</SelectScreen>
`;

exports[`<SelectScreen /> should render without props 1`] = `
<SelectScreen>
  <Screen>
    <div
      className="root"
      data-testid="screen"
      style={
        Object {
          "zIndex": 300,
        }
      }
    >
      <ForwardRef(BodySlot)
        key=".1"
      >
        <div
          className="body"
          data-testid="screen:body"
        >
          <MobileLayout
            disabledOn={
              Array [
                "mxs",
                "ms",
              ]
            }
          >
            <div
              className="layout mobile disabled-mxs disabled-ms"
            >
              <div
                className="container"
              />
            </div>
          </MobileLayout>
        </div>
      </ForwardRef(BodySlot)>
    </div>
  </Screen>
</SelectScreen>
`;
